--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,17 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
+    signingConfigs {
+        notes {
+            storeFile file('./../noteskey.jks')
+            storePassword '123456789'
+            keyAlias 'alias'
+            keyPassword '123456789'
+        }
+    }
     compileSdk 31
 
     defaultConfig {
@@ -13,9 +22,13 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.notes
     }
 
     buildTypes {
+        debug{
+            signingConfig signingConfigs.notes
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -35,4 +48,8 @@ dependencies {
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
 }
